<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- App name [CHAR LIMIT=12] -->
    <string name="app_name">Sunshine</string>
    <!-- Settings menu [CHAR LIMIT=21] -->
    <string name="action_settings">Settings</string>

    <!-- Refresh menu [CHAR LIMIT=12] -->
    <!-- If it's a proper name or for debugging purposes, use translatable="false"
    for strings that you don't want translated to save translation costs -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>

    <!-- Settings activity title [CHAR LIMIT=21] -->
    <string name="title_activity_settings">Settings</string>

    <!-- Location preference title in settings activity [CHAR LIMIT=25] -->
    <string name="pref_location_label">Location</string>
    <!-- Key for Location preference in settings activity -->
    <string name="pref_location_key" translatable="false">location</string>
    <!-- Default value for location in SettingsActivity -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- ListPreference strings in SettingsActivity [CHAR LIMIT=25]-->
    <string name="pref_temperature_units_label">Temperature Units</string>
    <string name="pref_temperature_units_key">temperature_units</string>

    <!-- Entries for ListPreference [CHAR LIMIT=25]-->
    <string name="pref_temperature_units_metric_entry">Metric</string>
    <string name="pref_temperature_units_imperial_entry">Imperial</string>

    <!-- Entry values for ListPreference -->
    <string name="pref_temperature_units_metric_value" translatable="false">metric</string>
    <string name="pref_temperature_units_imperial_value" translatable="false">imperial</string>


    <string name="action_show_location">Location Map</string>
    <string name="google_maps_not_installed">Google maps is not installed.</string>
    <string name="action_share">Share</string>
    <string name="hashSunshineApp">#SunshineApp</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>,
        <xliff:g id="date">%2$s</xliff:g>
    </string>


    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!--Accessibility string for text-to-speech feature like Talkback-->
    <string name="max_temperature_description">Maximum temperature is:
        <xliff:g id="temperature">%1$s</xliff:g>
    </string>
    <string name="min_temperature_description">Minimum temperature is:
        <xliff:g id="temperature">%1$s</xliff:g>
    </string>
    <string name="forecast_description">Weather forecast is:
        <xliff:g id="temperature">%1$s</xliff:g>
    </string>

    <!--Complete wind direction names for accessibility text-to-speech -->
    <string name="from_north">From North</string>
    <string name="from_north_east">From North-East</string>
    <string name="from_east">From East</string>
    <string name="from_south_east">From South-East</string>
    <string name="from_south">From South</string>
    <string name="from_south_west">From South-West</string>
    <string name="from_west">From West</string>
    <string name="from_north_west">From North-West</string>

    <!--Wind direction short form to display at the end of wind TextView on details screen-->
    <string name="north">N</string>
    <string name="north_east">NE</string>
    <string name="east">E</string>
    <string name="south_east">SE</string>
    <string name="south">S</string>
    <string name="south_west">SW</string>
    <string name="west">W</string>
    <string name="north_west">NW</string>
    <string name="arrow_pointing">Arrow pointing in the direction</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

</resources>
