<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>

    <!-- TODO : provide default from array -->
    <ListPreference
        android:title="@string/pref_temperature_units_label"
        android:key="@string/pref_temperature_units_key"
        android:defaultValue="@string/pref_temperature_units_metric_value"
        android:entries="@array/pref_temperature_units_entries_array"
        android:entryValues="@array/pref_temperature_units_values_array"/>

</PreferenceScreen>